tests/ui/inline-const/expr-unsafe-err.stderr
error[E0133]: call to unsafe function `require_unsafe` is unsafe and requires unsafe function or block
  --> $DIR/expr-unsafe-err.rs:7:9
   |
LL |         require_unsafe();
   |         ^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0133`.
